--- a/QtProject/QtProject/DlgMatchShape.ui
+++ b/QtProject/QtProject/DlgMatchShape.ui
@@ -6,121 +6,131 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>935</width>
-    <height>619</height>
+    <width>747</width>
+    <height>609</height>
    </rect>
   </property>
   <property name="sizePolicy">
-   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+   <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
   </property>
   <property name="minimumSize">
    <size>
-    <width>935</width>
-    <height>619</height>
+    <width>0</width>
+    <height>0</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>935</width>
-    <height>619</height>
+    <width>16777215</width>
+    <height>16777215</height>
    </size>
   </property>
   <property name="windowTitle">
    <string>DlgMatchShape</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
-    <layout class="QHBoxLayout" name="horizontalLayout">
+  <layout class="QHBoxLayout" name="horizontalLayout">
+   <item>
+    <layout class="QVBoxLayout" name="verticalLayout">
      <item>
-      <widget class="QLabel" name="label_Image">
-       <property name="enabled">
-        <bool>true</bool>
+      <widget class="QPushButton" name="Btn_OpenImage">
+       <property name="text">
+        <string>打开图片</string>
        </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="Btn_DrawLine">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
-       <property name="minimumSize">
-        <size>
-         <width>832</width>
-         <height>599</height>
-        </size>
-       </property>
-       <property name="maximumSize">
-        <size>
-         <width>832</width>
-         <height>599</height>
-        </size>
-       </property>
-       <property name="frameShape">
-        <enum>QFrame::Box</enum>
-       </property>
-       <property name="frameShadow">
-        <enum>QFrame::Plain</enum>
-       </property>
-       <property name="lineWidth">
-        <number>0</number>
-       </property>
-       <property name="midLineWidth">
-        <number>0</number>
-       </property>
        <property name="text">
-        <string/>
-       </property>
-       <property name="scaledContents">
-        <bool>true</bool>
+        <string>画线</string>
        </property>
       </widget>
      </item>
      <item>
-      <layout class="QVBoxLayout" name="verticalLayout">
-       <item>
-        <widget class="QPushButton" name="Btn_DrawLine">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-         <property name="text">
-          <string>画线</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QPushButton" name="Btn_DrawRect">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-         <property name="text">
-          <string>画矩形</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <spacer name="verticalSpacer">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-      </layout>
+      <widget class="QPushButton" name="Btn_DrawRect">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="text">
+        <string>画矩形</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="Btn_ClearWindow">
+       <property name="text">
+        <string>清空画板</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="verticalSpacer">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>40</height>
+        </size>
+       </property>
+      </spacer>
      </item>
     </layout>
+   </item>
+   <item>
+    <widget class="QLabel" name="label_Image">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="minimumSize">
+      <size>
+       <width>200</width>
+       <height>150</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>1600</width>
+       <height>1200</height>
+      </size>
+     </property>
+     <property name="frameShape">
+      <enum>QFrame::Box</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Plain</enum>
+     </property>
+     <property name="lineWidth">
+      <number>2</number>
+     </property>
+     <property name="midLineWidth">
+      <number>2</number>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="scaledContents">
+      <bool>true</bool>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
@@ -134,8 +144,8 @@
    <slot>on_btnLine_clicked()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>238</x>
-     <y>96</y>
+     <x>922</x>
+     <y>61</y>
     </hint>
     <hint type="destinationlabel">
      <x>338</x>
@@ -150,8 +160,8 @@
    <slot>on_btnRect_clicked()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>247</x>
-     <y>174</y>
+     <x>922</x>
+     <y>90</y>
     </hint>
     <hint type="destinationlabel">
      <x>355</x>
@@ -159,9 +169,43 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>Btn_OpenImage</sender>
+   <signal>clicked()</signal>
+   <receiver>DlgMatchShape</receiver>
+   <slot>on_btnOpenImage()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>886</x>
+     <y>23</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>859</x>
+     <y>-12</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>Btn_ClearWindow</sender>
+   <signal>clicked()</signal>
+   <receiver>DlgMatchShape</receiver>
+   <slot>on_btnClearWindow()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>885</x>
+     <y>108</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>931</x>
+     <y>111</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>on_btnLine_clicked()</slot>
   <slot>on_btnRect_clicked()</slot>
+  <slot>on_btnOpenImage()</slot>
+  <slot>on_btnClearWindow()</slot>
  </slots>
 </ui>
